@@ -37,6 +37,7 @@ AC_STDC_HEADERS
 AC_PATH_PROGS(NASM, nasm nasmw, no)
 AC_C_BIGENDIAN
 AC_CHECK_DECLS(nanosleep)
+AC_CHECK_TYPES(struct timespec)
 
 case $host_cpu in
 	sparc)
